we're only showing the top 40 genes in the type III anova

--- a/manuscript/common_latex.tex
+++ b/manuscript/common_latex.tex
@@ -47,7 +47,9 @@
 
 \newcommand{\lineagetableexplanationtypeiii}[2]{%
   \lineagetableexplanation[A nested type-III anova was used to
-  calculate p values.]{#1}{#2}}
+  calculate p values, and the top 40 genes by $\text{log}_2$
+  Fold-Change which changed significantly (FDR $\le 0.05$) are
+  shown. ]{#1}{#2}}
 
 
 
